--- a/logistics/test/assets/css/colors/green.css
+++ b/logistics/test/assets/css/colors/green.css
@@ -62,7 +62,7 @@ a:hover,
 .external:hover:after,
 .navbar-expand.navbar-light .navbar-nav .dropdown:not(.dropdown-submenu)>.dropdown-toggle:after,
 .navbar-light .language-select .dropdown-toggle:after {
-  color: #45c4a0;
+  color: #38C0C7;
 }
 .link-dark:hover,
 .text-primary,
@@ -75,7 +75,7 @@ a.text-reset:hover,
 .sidebar nav .nav-link.active,
 .plyr__control--overlaid:focus,
 .plyr__control--overlaid:hover {
-  color: #45c4a0 !important;
+  color: #38C0C7 !important;
 }
 .form-control:focus {
   border-color: #a2e2d0;
@@ -103,22 +103,22 @@ a.text-reset:hover,
 .btn-outline-primary:active,
 .navbar.navbar-light.fixed .btn:not(.btn-expand),
 .text-line:before {
-  background-color: #45c4a0;
+  background-color: #38C0C7;
 }
 .bg-primary,
 .icon-list.bullet-bg i[class*=bullet-primary] {
-  background-color: #45c4a0 !important;
+  background-color: #38C0C7 !important;
 }
 .btn-primary.btn-circle.ripple::after,
 .btn-primary.btn-circle.ripple::before,
 .plyr--video .plyr__controls .plyr__control.plyr__tab-focus,
 .plyr--video .plyr__controls .plyr__control:hover,
 .plyr--video .plyr__controls .plyr__control[aria-expanded=true] {
-  background: #45c4a0;
+  background: #38C0C7;
 }
 .swiper-container.nav-color .swiper-slide figure .item-link:hover,
 .swiper-container.nav-color .swiper-navigation .swiper-button:hover {
-  background: #45c4a0 !important;
+  background: #38C0C7 !important;
 }
 .text-inverse a:not(.btn):hover,
 .form-check-input:checked,
@@ -142,34 +142,34 @@ blockquote,
 .lg-outer .lg-item:after,
 .loader,
 .tp-loader.spinner {
-  border-color: #45c4a0;
+  border-color: #38C0C7;
 }
 .border-primary {
-  border-color: #45c4a0 !important;
+  border-color: #38C0C7 !important;
 }
 .bs-tooltip-auto[data-popper-placement^=top] .tooltip-arrow::before,
 .bs-tooltip-top .tooltip-arrow::before {
-  border-top-color: #45c4a0;
+  border-top-color: #38C0C7;
 }
 .bs-tooltip-auto[data-popper-placement^=right] .tooltip-arrow::before,
 .bs-tooltip-end .tooltip-arrow::before,
 .wrapper.bg-primary.angled.lower-end:after,
 .wrapper.bg-primary.angled.upper-end:before {
-  border-right-color: #45c4a0;
+  border-right-color: #38C0C7;
 }
 .bs-tooltip-auto[data-popper-placement^=bottom] .tooltip-arrow::before,
 .bs-tooltip-bottom .tooltip-arrow::before {
-  border-bottom-color: #45c4a0;
+  border-bottom-color: #38C0C7;
 }
 .bs-tooltip-auto[data-popper-placement^=left] .tooltip-arrow::before,
 .bs-tooltip-start .tooltip-arrow::before,
 .wrapper.bg-primary.angled.lower-start:after,
 .wrapper.bg-primary.angled.upper-start:before {
-  border-left-color: #45c4a0;
+  border-left-color: #38C0C7;
 }
 .progress-list .progressbar.primary svg path:last-child,
 .progress-wrap svg.progress-circle path {
-  stroke: #45c4a0;
+  stroke: #38C0C7;
 }
 .progress-list .progressbar.soft-primary svg path:last-child {
   stroke: #8fdcc6;
@@ -179,7 +179,7 @@ blockquote,
   fill: #8fdcc6;
 }
 .shape .svg-fill {
-  fill: #45c4a0;
+  fill: #38C0C7;
 }
 .shape.soft-primary .svg-fill {
   fill: #f1fbf8;
@@ -199,11 +199,11 @@ blockquote,
 }
 .underline-2.primary:after,
 .underline-2:not([class*=underline-gradient-]):after {
-  background: #45c4a0;
+  background: #38C0C7;
 }
 .underline-3.primary.style-1:before,
 .underline-3.primary.style-1:after {
-  border-color: #45c4a0;
+  border-color: #38C0C7;
 }
 .underline-3.primary.style-2:after {
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 208.01 8.3'%3E%3Cpath fill='%2345c4a0' d='M64.42,2.42Q42.78,1.46,21.19,0c-2.8-.19-4.09.89-3.87,2L3.92,1.87c-5.13-.05-5.28,3.87-.12,3.92l60.49.55c46.63,2.08,93.34,2.51,139.81,1.27,5-.13,5.39-3.87.13-3.92Z'/%3E%3C/svg%3E");
@@ -265,26 +265,26 @@ form.dark-fields .form-control:focus {
   background-color: #e1f6f0;
 }
 .btn-expand.btn-primary {
-  color: #45c4a0;
+  color: #38C0C7;
 }
 .btn-expand.btn-primary:before {
-  background-color: #45c4a0;
+  background-color: #38C0C7;
 }
 .btn-expand.btn-soft-primary {
-  color: #45c4a0;
+  color: #38C0C7;
 }
 .btn-expand.btn-soft-primary i {
-  color: #45c4a0;
+  color: #38C0C7;
 }
 .btn-expand.btn-soft-primary:before {
-  color: #45c4a0;
+  color: #38C0C7;
   background-color: #e1f6f0;
 }
 .btn-expand.btn-soft-primary:hover {
-  color: #45c4a0;
+  color: #38C0C7;
 }
 .btn-expand.btn-soft-primary:hover:before {
-  color: #45c4a0;
+  color: #38C0C7;
 }
 .alert-dismissible.alert-primary .btn-close {
   color: #3eb090;
@@ -319,13 +319,13 @@ form.dark-fields .form-control:focus {
   background-color: #f1fbf8;
 }
 .bg-dot.primary {
-  background-image: radial-gradient(#45c4a0 2px, transparent 2.5px);
+  background-image: radial-gradient(#38C0C7 2px, transparent 2.5px);
 }
 .bg-line.primary {
-  background: repeating-linear-gradient(-55deg, rgba(255, 255, 255, 0) 0.8px, #45c4a0 1.6px, #45c4a0 3px, rgba(255, 255, 255, 0) 3.8px, rgba(255, 255, 255, 0) 10px);
+  background: repeating-linear-gradient(-55deg, rgba(255, 255, 255, 0) 0.8px, #38C0C7 1.6px, #38C0C7 3px, rgba(255, 255, 255, 0) 3.8px, rgba(255, 255, 255, 0) 10px);
 }
 .navbar-light .navbar-toggler-icon {
-  background-image: url("data:image/svg+xml,<svg version='1.1' xmlns='http://www.w3.org/2000/svg' width='45' height='32' viewBox='0 0 45 32'><path fill='#45c4a0' d='M26.88 29.888c-1.076 1.289-2.683 2.103-4.48 2.103s-3.404-0.814-4.472-2.093l-0.008-0.009-5.12-7.040-8.192-10.048-3.52-4.608c-0.646-0.848-1.036-1.922-1.036-3.087 0-2.828 2.292-5.12 5.12-5.12 0.139 0 0.277 0.006 0.413 0.016l-0.018-0.001h33.664c0.118-0.010 0.256-0.015 0.396-0.015 2.828 0 5.12 2.292 5.12 5.12 0 1.165-0.389 2.239-1.045 3.1l0.009-0.013-3.52 4.608-7.872 10.048z'/></svg>");
+  background-image: url("data:image/svg+xml,<svg version='1.1' xmlns='http://www.w3.org/2000/svg' width='45' height='32' viewBox='0 0 45 32'><path fill='#38C0C7' d='M26.88 29.888c-1.076 1.289-2.683 2.103-4.48 2.103s-3.404-0.814-4.472-2.093l-0.008-0.009-5.12-7.040-8.192-10.048-3.52-4.608c-0.646-0.848-1.036-1.922-1.036-3.087 0-2.828 2.292-5.12 5.12-5.12 0.139 0 0.277 0.006 0.413 0.016l-0.018-0.001h33.664c0.118-0.010 0.256-0.015 0.396-0.015 2.828 0 5.12 2.292 5.12 5.12 0 1.165-0.389 2.239-1.045 3.1l0.009-0.013-3.52 4.608-7.872 10.048z'/></svg>");
 }
 .cursor-primary a {
   cursor: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='50' height='50' viewBox='0 0 50 50'%3E%3Cdefs%3E%3Cstyle%3E.cls-1%7Bfill:%2345c4a0;opacity:0.9;%7D.cls-2%7Bfill:%23fff;%7D%3C/style%3E%3C/defs%3E%3Ccircle class='cls-1' cx='25' cy='25' r='25'/%3E%3Cpath class='cls-2' d='M21.79,26.79,17,31.59V30a1,1,0,0,0-2,0v4a1,1,0,0,0,.08.38,1,1,0,0,0,.54.54A1,1,0,0,0,16,35h4a1,1,0,0,0,0-2H18.41l4.8-4.79a1,1,0,0,0-1.42-1.42Z'/%3E%3Cpath class='cls-2' d='M34.92,15.62a1,1,0,0,0-.54-.54A1,1,0,0,0,34,15H30a1,1,0,0,0,0,2h1.59l-4.8,4.79a1,1,0,0,0,0,1.41h0a1,1,0,0,0,1.41,0h0L33,18.41V20a1,1,0,0,0,2,0V16A1,1,0,0,0,34.92,15.62Z'/%3E%3C/svg%3E"), auto;
@@ -335,26 +335,26 @@ form.dark-fields .form-control:focus {
 }
 @media (min-width: 576px) {
   .navbar-expand-sm.navbar-light .navbar-nav .dropdown:not(.dropdown-submenu)>.dropdown-toggle:after {
-    color: #45c4a0;
+    color: #38C0C7;
   }
 }
 @media (min-width: 768px) {
   .navbar-expand-md.navbar-light .navbar-nav .dropdown:not(.dropdown-submenu)>.dropdown-toggle:after {
-    color: #45c4a0;
+    color: #38C0C7;
   }
 }
 @media (min-width: 992px) {
   .navbar-expand-lg.navbar-light .navbar-nav .dropdown:not(.dropdown-submenu)>.dropdown-toggle:after {
-    color: #45c4a0;
+    color: #38C0C7;
   }
 }
 @media (min-width: 1200px) {
   .navbar-expand-xl.navbar-light .navbar-nav .dropdown:not(.dropdown-submenu)>.dropdown-toggle:after {
-    color: #45c4a0;
+    color: #38C0C7;
   }
 }
 @media (min-width: 1400px) {
   .navbar-expand-xxl.navbar-light .navbar-nav .dropdown:not(.dropdown-submenu)>.dropdown-toggle:after {
-    color: #45c4a0;
+    color: #38C0C7;
   }
 }
