--- a/new/shipping/assets/css/colors/green.css
+++ b/new/shipping/assets/css/colors/green.css
@@ -62,7 +62,7 @@ a:hover,
 .external:hover:after,
 .navbar-expand.navbar-light .navbar-nav .dropdown:not(.dropdown-submenu)>.dropdown-toggle:after,
 .navbar-light .language-select .dropdown-toggle:after {
-  color: #38C0C7;
+  color: #e2626b;
 }
 .link-dark:hover,
 .text-primary,
@@ -75,10 +75,10 @@ a.text-reset:hover,
 .sidebar nav .nav-link.active,
 .plyr__control--overlaid:focus,
 .plyr__control--overlaid:hover {
-  color: #38C0C7 !important;
+  color: #e2626b !important;
 }
 .form-control:focus {
-  border-color: #a2e2d0;
+  border-color: #f1b1b5;
 }
 .text-line.text-primary:before,
 .tooltip-inner,
@@ -103,22 +103,22 @@ a.text-reset:hover,
 .btn-outline-primary:active,
 .navbar.navbar-light.fixed .btn:not(.btn-expand),
 .text-line:before {
-  background-color: #38C0C7;
+  background-color: #e2626b;
 }
 .bg-primary,
 .icon-list.bullet-bg i[class*=bullet-primary] {
-  background-color: #38C0C7 !important;
+  background-color: #e2626b !important;
 }
 .btn-primary.btn-circle.ripple::after,
 .btn-primary.btn-circle.ripple::before,
 .plyr--video .plyr__controls .plyr__control.plyr__tab-focus,
 .plyr--video .plyr__controls .plyr__control:hover,
 .plyr--video .plyr__controls .plyr__control[aria-expanded=true] {
-  background: #38C0C7;
+  background: #e2626b;
 }
 .swiper-container.nav-color .swiper-slide figure .item-link:hover,
 .swiper-container.nav-color .swiper-navigation .swiper-button:hover {
-  background: #38C0C7 !important;
+  background: #e2626b !important;
 }
 .text-inverse a:not(.btn):hover,
 .form-check-input:checked,
@@ -142,219 +142,219 @@ blockquote,
 .lg-outer .lg-item:after,
 .loader,
 .tp-loader.spinner {
-  border-color: #38C0C7;
+  border-color: #e2626b;
 }
 .border-primary {
-  border-color: #38C0C7 !important;
+  border-color: #e2626b !important;
 }
 .bs-tooltip-auto[data-popper-placement^=top] .tooltip-arrow::before,
 .bs-tooltip-top .tooltip-arrow::before {
-  border-top-color: #38C0C7;
+  border-top-color: #e2626b;
 }
 .bs-tooltip-auto[data-popper-placement^=right] .tooltip-arrow::before,
 .bs-tooltip-end .tooltip-arrow::before,
 .wrapper.bg-primary.angled.lower-end:after,
 .wrapper.bg-primary.angled.upper-end:before {
-  border-right-color: #38C0C7;
+  border-right-color: #e2626b;
 }
 .bs-tooltip-auto[data-popper-placement^=bottom] .tooltip-arrow::before,
 .bs-tooltip-bottom .tooltip-arrow::before {
-  border-bottom-color: #38C0C7;
+  border-bottom-color: #e2626b;
 }
 .bs-tooltip-auto[data-popper-placement^=left] .tooltip-arrow::before,
 .bs-tooltip-start .tooltip-arrow::before,
 .wrapper.bg-primary.angled.lower-start:after,
 .wrapper.bg-primary.angled.upper-start:before {
-  border-left-color: #38C0C7;
+  border-left-color: #e2626b;
 }
 .progress-list .progressbar.primary svg path:last-child,
 .progress-wrap svg.progress-circle path {
-  stroke: #38C0C7;
+  stroke: #e2626b;
 }
 .progress-list .progressbar.soft-primary svg path:last-child {
-  stroke: #8fdcc6;
+  stroke: #eea1a6;
 }
 .lineal-fill,
 .text-primary .lineal-fill {
-  fill: #8fdcc6;
+  fill: #eea1a6;
 }
 .shape .svg-fill {
-  fill: #38C0C7;
+  fill: #e2626b;
 }
 .shape.soft-primary .svg-fill {
-  fill: #f1fbf8;
+  fill: #fdf3f4;
 }
 .shape.pale-primary .svg-fill {
-  fill: #e1f6f0;
+  fill: #fae6e7;
 }
 ::-moz-selection {
-  background: rgba(69, 196, 160, 0.7);
+  background: rgba(226, 98, 107, 0.7);
 }
 ::selection {
-  background: rgba(69, 196, 160, 0.7);
+  background: rgba(226, 98, 107, 0.7);
 }
 .underline.primary:after,
 .underline:after {
-  background: rgba(69, 196, 160, 0.12);
+  background: rgba(226, 98, 107, 0.12);
 }
 .underline-2.primary:after,
 .underline-2:not([class*=underline-gradient-]):after {
-  background: #38C0C7;
+  background: #e2626b;
 }
 .underline-3.primary.style-1:before,
 .underline-3.primary.style-1:after {
-  border-color: #38C0C7;
+  border-color: #e2626b;
 }
 .underline-3.primary.style-2:after {
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 208.01 8.3'%3E%3Cpath fill='%2345c4a0' d='M64.42,2.42Q42.78,1.46,21.19,0c-2.8-.19-4.09.89-3.87,2L3.92,1.87c-5.13-.05-5.28,3.87-.12,3.92l60.49.55c46.63,2.08,93.34,2.51,139.81,1.27,5-.13,5.39-3.87.13-3.92Z'/%3E%3C/svg%3E");
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 208.01 8.3'%3E%3Cpath fill='%23e2626b' d='M64.42,2.42Q42.78,1.46,21.19,0c-2.8-.19-4.09.89-3.87,2L3.92,1.87c-5.13-.05-5.28,3.87-.12,3.92l60.49.55c46.63,2.08,93.34,2.51,139.81,1.27,5-.13,5.39-3.87.13-3.92Z'/%3E%3C/svg%3E");
 }
 .underline-3.primary.style-3:after {
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 205 9.37'%3E%3Cpath fill='%2345c4a0' d='M202.47,9.37A1191.26,1191.26,0,0,0,1.79,7.48,1.67,1.67,0,0,1,0,5.92H0A1.76,1.76,0,0,1,1.63,4.21c67-5.71,133.83-5.43,200.8-.27A2.75,2.75,0,0,1,205,6.88h0A2.6,2.6,0,0,1,202.47,9.37Z'/%3E%3C/svg%3E");
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 205 9.37'%3E%3Cpath fill='%23e2626b' d='M202.47,9.37A1191.26,1191.26,0,0,0,1.79,7.48,1.67,1.67,0,0,1,0,5.92H0A1.76,1.76,0,0,1,1.63,4.21c67-5.71,133.83-5.43,200.8-.27A2.75,2.75,0,0,1,205,6.88h0A2.6,2.6,0,0,1,202.47,9.37Z'/%3E%3C/svg%3E");
 }
 a.hover-2:before,
 a.hover-3:before {
-  background-color: #e1f6f0;
+  background-color: #fae6e7;
 }
 .bg-soft-primary {
-  background-color: #f1fbf8 !important;
+  background-color: #fdf3f4 !important;
 }
 .text-soft-primary {
-  color: #f1fbf8 !important;
+  color: #fdf3f4 !important;
 }
 .bg-pale-primary {
-  background-color: #e1f6f0 !important;
+  background-color: #fae6e7 !important;
 }
 .text-pale-primary {
-  color: #e1f6f0 !important;
+  color: #fae6e7 !important;
 }
 .bg-gradient-primary {
-  background: linear-gradient(180deg, #f1fbf8, rgba(255, 255, 255, 0) 100%);
+  background: linear-gradient(180deg, #fdf3f4, rgba(255, 255, 255, 0) 100%);
 }
 .bg-gradient-reverse-primary {
-  background: linear-gradient(0deg, #f1fbf8, rgba(255, 255, 255, 0) 100%);
+  background: linear-gradient(0deg, #fdf3f4, rgba(255, 255, 255, 0) 100%);
 }
 .border-soft-primary {
-  border-color: #c7ede3 !important;
+  border-color: #f6d0d3 !important;
 }
 .wrapper.bg-soft-primary.angled.lower-start:after,
 .wrapper.bg-soft-primary.angled.upper-start:before {
-  border-left-color: #f1fbf8;
+  border-left-color: #fdf3f4;
 }
 .wrapper.bg-soft-primary.angled.lower-end:after,
 .wrapper.bg-soft-primary.angled.upper-end:before {
-  border-right-color: #f1fbf8;
+  border-right-color: #fdf3f4;
 }
 .wrapper.bg-pale-primary.angled.lower-start:after,
 .wrapper.bg-pale-primary.angled.upper-start:before {
-  border-left-color: #e1f6f0;
+  border-left-color: #fae6e7;
 }
 .wrapper.bg-pale-primary.angled.lower-end:after,
 .wrapper.bg-pale-primary.angled.upper-end:before {
-  border-right-color: #e1f6f0;
+  border-right-color: #fae6e7;
 }
 .icon-list.bullet-soft-primary.bullet-bg i {
-  background-color: #def4ee;
+  background-color: #fae3e4;
 }
 .icon-list.bullet-bg i[class*=bullet-soft-primary] {
-  background-color: #def4ee !important;
+  background-color: #fae3e4 !important;
 }
 form.dark-fields .form-control:focus {
-  border-color: rgba(69, 196, 160, 0.5);
+  border-color: rgba(226, 98, 107, 0.5);
 }
 .btn-soft-primary {
-  background-color: #e1f6f0;
+  background-color: #fae6e7;
 }
 .btn-expand.btn-primary {
-  color: #38C0C7;
+  color: #e2626b;
 }
 .btn-expand.btn-primary:before {
-  background-color: #38C0C7;
+  background-color: #e2626b;
 }
 .btn-expand.btn-soft-primary {
-  color: #38C0C7;
+  color: #e2626b;
 }
 .btn-expand.btn-soft-primary i {
-  color: #38C0C7;
+  color: #e2626b;
 }
 .btn-expand.btn-soft-primary:before {
-  color: #38C0C7;
-  background-color: #e1f6f0;
+  color: #e2626b;
+  background-color: #fae6e7;
 }
 .btn-expand.btn-soft-primary:hover {
-  color: #38C0C7;
+  color: #e2626b;
 }
 .btn-expand.btn-soft-primary:hover:before {
-  color: #38C0C7;
+  color: #e2626b;
 }
 .alert-dismissible.alert-primary .btn-close {
-  color: #3eb090;
+  color: #cb5860;
 }
 .alert-dismissible.alert-primary .btn-close:hover {
-  color: #297660;
+  color: #883b40;
 }
 .alert-primary {
-  color: #308970;
-  background-color: #ecf9f6;
-  border-color: #c7ede3;
+  color: #9e454b;
+  background-color: #fceff0;
+  border-color: #f6d0d3;
 }
 .alert-primary .alert-link {
-  color: #379d80;
+  color: #b54e56;
 }
 .swiper-container.nav-color .swiper-slide figure .item-link,
 .swiper-container.nav-color .swiper-navigation .swiper-button {
-  background: rgba(69, 196, 160, 0.9) !important;
+  background: rgba(226, 98, 107, 0.9) !important;
 }
 .swiper-container.nav-color .swiper-navigation .swiper-button-disabled {
-  background: rgba(69, 196, 160, 0.7) !important;
+  background: rgba(226, 98, 107, 0.7) !important;
 }
 .overlay.color span.bg {
-  background: rgba(69, 196, 160, 0.7);
+  background: rgba(226, 98, 107, 0.7);
 }
 .itooltip-color.itooltip-inner,
 .itooltip-primary.itooltip-inner {
-  background: rgba(69, 196, 160, 0.9);
+  background: rgba(226, 98, 107, 0.9);
 }
 .btn-soft-primary.btn-circle.ripple::after,
 .btn-soft-primary.btn-circle.ripple::before {
-  background-color: #f1fbf8;
+  background-color: #fdf3f4;
 }
 .bg-dot.primary {
-  background-image: radial-gradient(#38C0C7 2px, transparent 2.5px);
+  background-image: radial-gradient(#e2626b 2px, transparent 2.5px);
 }
 .bg-line.primary {
-  background: repeating-linear-gradient(-55deg, rgba(255, 255, 255, 0) 0.8px, #38C0C7 1.6px, #38C0C7 3px, rgba(255, 255, 255, 0) 3.8px, rgba(255, 255, 255, 0) 10px);
+  background: repeating-linear-gradient(-55deg, rgba(255, 255, 255, 0) 0.8px, #e2626b 1.6px, #e2626b 3px, rgba(255, 255, 255, 0) 3.8px, rgba(255, 255, 255, 0) 10px);
 }
 .navbar-light .navbar-toggler-icon {
-  background-image: url("data:image/svg+xml,<svg version='1.1' xmlns='http://www.w3.org/2000/svg' width='45' height='32' viewBox='0 0 45 32'><path fill='#38C0C7' d='M26.88 29.888c-1.076 1.289-2.683 2.103-4.48 2.103s-3.404-0.814-4.472-2.093l-0.008-0.009-5.12-7.040-8.192-10.048-3.52-4.608c-0.646-0.848-1.036-1.922-1.036-3.087 0-2.828 2.292-5.12 5.12-5.12 0.139 0 0.277 0.006 0.413 0.016l-0.018-0.001h33.664c0.118-0.010 0.256-0.015 0.396-0.015 2.828 0 5.12 2.292 5.12 5.12 0 1.165-0.389 2.239-1.045 3.1l0.009-0.013-3.52 4.608-7.872 10.048z'/></svg>");
+  background-image: url("data:image/svg+xml,<svg version='1.1' xmlns='http://www.w3.org/2000/svg' width='45' height='32' viewBox='0 0 45 32'><path fill='#e2626b' d='M26.88 29.888c-1.076 1.289-2.683 2.103-4.48 2.103s-3.404-0.814-4.472-2.093l-0.008-0.009-5.12-7.040-8.192-10.048-3.52-4.608c-0.646-0.848-1.036-1.922-1.036-3.087 0-2.828 2.292-5.12 5.12-5.12 0.139 0 0.277 0.006 0.413 0.016l-0.018-0.001h33.664c0.118-0.010 0.256-0.015 0.396-0.015 2.828 0 5.12 2.292 5.12 5.12 0 1.165-0.389 2.239-1.045 3.1l0.009-0.013-3.52 4.608-7.872 10.048z'/></svg>");
 }
 .cursor-primary a {
-  cursor: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='50' height='50' viewBox='0 0 50 50'%3E%3Cdefs%3E%3Cstyle%3E.cls-1%7Bfill:%2345c4a0;opacity:0.9;%7D.cls-2%7Bfill:%23fff;%7D%3C/style%3E%3C/defs%3E%3Ccircle class='cls-1' cx='25' cy='25' r='25'/%3E%3Cpath class='cls-2' d='M21.79,26.79,17,31.59V30a1,1,0,0,0-2,0v4a1,1,0,0,0,.08.38,1,1,0,0,0,.54.54A1,1,0,0,0,16,35h4a1,1,0,0,0,0-2H18.41l4.8-4.79a1,1,0,0,0-1.42-1.42Z'/%3E%3Cpath class='cls-2' d='M34.92,15.62a1,1,0,0,0-.54-.54A1,1,0,0,0,34,15H30a1,1,0,0,0,0,2h1.59l-4.8,4.79a1,1,0,0,0,0,1.41h0a1,1,0,0,0,1.41,0h0L33,18.41V20a1,1,0,0,0,2,0V16A1,1,0,0,0,34.92,15.62Z'/%3E%3C/svg%3E"), auto;
+  cursor: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='50' height='50' viewBox='0 0 50 50'%3E%3Cdefs%3E%3Cstyle%3E.cls-1%7Bfill:%23e2626b;opacity:0.9;%7D.cls-2%7Bfill:%23fff;%7D%3C/style%3E%3C/defs%3E%3Ccircle class='cls-1' cx='25' cy='25' r='25'/%3E%3Cpath class='cls-2' d='M21.79,26.79,17,31.59V30a1,1,0,0,0-2,0v4a1,1,0,0,0,.08.38,1,1,0,0,0,.54.54A1,1,0,0,0,16,35h4a1,1,0,0,0,0-2H18.41l4.8-4.79a1,1,0,0,0-1.42-1.42Z'/%3E%3Cpath class='cls-2' d='M34.92,15.62a1,1,0,0,0-.54-.54A1,1,0,0,0,34,15H30a1,1,0,0,0,0,2h1.59l-4.8,4.79a1,1,0,0,0,0,1.41h0a1,1,0,0,0,1.41,0h0L33,18.41V20a1,1,0,0,0,2,0V16A1,1,0,0,0,34.92,15.62Z'/%3E%3C/svg%3E"), auto;
 }
 .process-wrapper.arrow [class*=col-]:before {
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 108.15 19.5'%3E%3Cpath fill='%2345c4a0' d='M2.38,13.63A107.77,107.77,0,0,1,41.56,3.28C54.29,2.51,67,4.2,79.4,6.9c7.73,1.68,15.38,3.73,23,5.86a1.56,1.56,0,0,0,.83-3C89.85,6,76.35,2.5,62.54.87A111,111,0,0,0,24,2.73,119,119,0,0,0,.8,10.93c-1.81.85-.23,3.54,1.58,2.7Z'/%3E%3Cpath fill='%2345c4a0' d='M95.51,19.27A60.35,60.35,0,0,1,107,12.41a1.58,1.58,0,0,0,1.12-1.29,1.53,1.53,0,0,0-.75-1.56,20.31,20.31,0,0,1-9-8.65,1.56,1.56,0,0,0-2.7,1.57c2.34,4,5.79,7.86,10.12,9.78l.37-2.86a62.69,62.69,0,0,0-12.25,7.18,1.6,1.6,0,0,0-.56,2.14,1.56,1.56,0,0,0,2.13.55Z'/%3E%3C/svg%3E");
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 108.15 19.5'%3E%3Cpath fill='%23e2626b' d='M2.38,13.63A107.77,107.77,0,0,1,41.56,3.28C54.29,2.51,67,4.2,79.4,6.9c7.73,1.68,15.38,3.73,23,5.86a1.56,1.56,0,0,0,.83-3C89.85,6,76.35,2.5,62.54.87A111,111,0,0,0,24,2.73,119,119,0,0,0,.8,10.93c-1.81.85-.23,3.54,1.58,2.7Z'/%3E%3Cpath fill='%23e2626b' d='M95.51,19.27A60.35,60.35,0,0,1,107,12.41a1.58,1.58,0,0,0,1.12-1.29,1.53,1.53,0,0,0-.75-1.56,20.31,20.31,0,0,1-9-8.65,1.56,1.56,0,0,0-2.7,1.57c2.34,4,5.79,7.86,10.12,9.78l.37-2.86a62.69,62.69,0,0,0-12.25,7.18,1.6,1.6,0,0,0-.56,2.14,1.56,1.56,0,0,0,2.13.55Z'/%3E%3C/svg%3E");
 }
 @media (min-width: 576px) {
   .navbar-expand-sm.navbar-light .navbar-nav .dropdown:not(.dropdown-submenu)>.dropdown-toggle:after {
-    color: #38C0C7;
+    color: #e2626b;
   }
 }
 @media (min-width: 768px) {
   .navbar-expand-md.navbar-light .navbar-nav .dropdown:not(.dropdown-submenu)>.dropdown-toggle:after {
-    color: #38C0C7;
+    color: #e2626b;
   }
 }
 @media (min-width: 992px) {
   .navbar-expand-lg.navbar-light .navbar-nav .dropdown:not(.dropdown-submenu)>.dropdown-toggle:after {
-    color: #38C0C7;
+    color: #e2626b;
   }
 }
 @media (min-width: 1200px) {
   .navbar-expand-xl.navbar-light .navbar-nav .dropdown:not(.dropdown-submenu)>.dropdown-toggle:after {
-    color: #38C0C7;
+    color: #e2626b;
   }
 }
 @media (min-width: 1400px) {
   .navbar-expand-xxl.navbar-light .navbar-nav .dropdown:not(.dropdown-submenu)>.dropdown-toggle:after {
-    color: #38C0C7;
+    color: #e2626b;
   }
 }
