--- a/logistics/contenedores/assets/css/styles.css
+++ b/logistics/contenedores/assets/css/styles.css
@@ -6,7 +6,7 @@
     border-radius: 5px;
     text-align: center;
     z-index: 1000;
-    display: none;
+    display: flex;
 }
 
 .whatsapp-button a {
