--- a/new/group/assets/css/style.css
+++ b/new/group/assets/css/style.css
@@ -646,7 +646,7 @@ progress {
   margin-top: var(--bs-gutter-y);
 }
 .col {
-  flex: 1 0 0%;
+  flex: 1 0 20%;
 }
 .row-cols-auto>* {
   flex: 0 0 auto;
@@ -658,7 +658,7 @@ progress {
 }
 .row-cols-2>* {
   flex: 0 0 auto;
-  width: 50%;
+  width: 150%;
 }
 .row-cols-3>* {
   flex: 0 0 auto;
@@ -37755,4 +37755,23 @@ footer.bg-dark.angled.upper-start:before {
 .text-logo {
   color: red;
   margin-top: 10px;
+}
+
+.divisor {
+  border:solid; /* Remove the default border */
+  height: 1px; /* Set the height of the divider */
+  background-color: #1C3B6B; /* Set the color of the divider */
+  margin-left: 300px;
+  margin-right: 300px;
+}
+
+.wrapperino {
+  background-image: url('../wallpaper.jpg'); /* Replace 'your-image.jpg' with your image file */
+  background-size: cover; /* Cover the entire background */
+  background-attachment: scroll; /* Scroll the background image with the content */
+  /* Other styles for the wrapper */
+  width: 100%;
+  height: 80vh; /* Set the height of the wrapper, adjust as needed */
+  overflow-y: auto; /* Enable vertical scrolling for the wrapper */
+  align-items: center;
 }
