--- a/logistics/assets/css/estilos.css
+++ b/logistics/assets/css/estilos.css
@@ -1,5 +1,5 @@
 .boton-enviar1 {
-    background-color: aquamarine; /* Color de fondo */
+    background-color: rgb(47, 224, 165); /* Color de fondo */
     border: none;
     color: black; /* Color del texto */
     padding: 10px 20px; /* Espaciado interno */
