se sube web grupo nueva y cambios en marketing

--- a/assets/css/_main.css
+++ b/assets/css/_main.css
@@ -1300,7 +1300,7 @@ a.video-vol{
 }
 
 .parallax-profile{
-	background-image:url(http://neo.uy/repremar/assets/images/home2.jpg);
+	background-image:url(assets/imagenes/home.jpg);
 	max-width:1920px;
 }
 
