--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1324,7 +1324,7 @@ a.video-vol{
 }
 
 .parallax-profile{
-    background-image:url("../images/home2.jpg");
+    background-image:url("../images/home.jpg");
     /*max-width:1920px;*/
 }
 
